--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
-
+* {
+  margin: 0;
+}
 body {
   width: 100%;
   min-height: 100vh;
@@ -12,13 +14,14 @@ main {
   display: flex;
   flex-direction: column;
   max-width: 730px;
-
+  margin-top: 40px;
   height: auto;
   padding: 20px;
   color: #5e6778;
   font-family: "Plus Jakarta Sans", sans-serif;
   font-weight: 500;
   font-size: 16px;
+  gap: 20px;
 }
 header {
   display: flex;
