--- a/style.css
+++ b/style.css
@@ -8,20 +8,23 @@ body {
   display: flex;
   justify-content: center;
   overflow-x: hidden;
+  background-color: #f7fafd;
 }
 
 main {
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   max-width: 730px;
-  margin-top: 40px;
+  margin-top: 50px;
   height: auto;
   padding: 20px;
+  padding-top: 40px;
   color: #5e6778;
   font-family: "Plus Jakarta Sans", sans-serif;
   font-weight: 500;
   font-size: 16px;
-  gap: 20px;
+  gap: 30px;
 }
 header {
   display: flex;
