--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav {
   align-items: center;
   gap: 20px;
   position: relative;
-  padding: 10px;
+  padding: 20px 10px;
   border-radius: 8px;
 }
 .notice img {
